--- a/package.json
+++ b/package.json
@@ -10,11 +10,35 @@
     "build": "tsc -p tsconfig.build.json",
     "prepare": "yarn build"
   },
+  "homepage": "https://github.com/y-chan/node-aquestalk10#readme",
+  "keywords": [
+    "AquesTalk",
+    "texttospeech"
+  ],
+  "author": "y-chan <y-chan@y-chan.dev>",
+  "bugs": {
+    "url": "https://github.com/y-chan/node-aquestalk10/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/y-chan/node-aquestalk10"
+  },
+  "license": "MPL-2.0",
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "files": [
+    "index.d.ts",
+    "index.js",
+    "aquestalk10.cc",
+    "aquestalk10.h",
+    "aquestalk10",
+    "binding.gyp"
+  ],
   "gypfile": true,
   "dependencies": {
     "@types/node": "^16.4.3",
     "bindings": "^1.5.0",
-    "node": "^16.5.0",
     "node-addon-api": "^4.0.0",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
